# AIOSS_GovOn

./: .dockerignore  .env.airgap.example  .env.example  .env.hfspace.example  .env.local.example  .env.prod.example  .gemini.md  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hfspace  GOVERNANCE.md  LICENSE  Makefile  README.md  aiossWeek6.md  alembic.ini  docker-compose.ci.yml  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml  final_issue_body.md  ollama_claude_code_colab.ipynb  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-ci.txt  requirements.txt  wb_skills_experiment_colab.ipynb
.claude/agents/: prd-writer.md  quantized-model-analyzer.md  wbs-creator.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: feature_task.yml
.github/agents/: aioss-matrix-builder.agent.md
.github/scripts/: free_runner_disk_space.sh  run_inference_ci.sh  smoke_test_container.sh
.github/workflows/: ci-cd.yml  ci.yml  compose-smoke.yml  contribution-guardrails.yml  data-indexing-validation.yml  data-ingestion.yml  dependabot-auto-merge.yml  deploy-cloud-run.yml  deploy-pages.yml  docker-publish.yml  dora-metrics.yml  e2e.yml  hello-world.yml  jekyll-gh-pages.yml  lean-experiment.yml  metrics.yml  model-eval.yml  monitor-cloud-run.yml  nextjs-gh-pages.yml  offline-package.yml  pr-cleanup.yml  pr-labeler.yml  pr-preview.yml  publish-package.yml  reusable-python-ci.yml  reusable-test.yml  security.yml  selective-deploy.yml  train_exaone_gpu.yml
agents/: classifier.md  generator.md  generator_civil_response.md  generator_public_doc.md  retriever.md
benchmarks/: __init__.py  bench_graph_latency.py
configs/: experiment_config.yaml
data/processed/: v2_quality_report.json  v2_test.jsonl  v2_val.jsonl
docs/: GovOn-orchestrator-tasklist.md  ISSUE_318_ENHANCEMENT.md  backlog-plan.md  branch-strategy.md  conventional-commits.md  draft.md  frontend-css-framework-selection.md  frontend-ui-library-selection.md  innersource-plan.md  oss-license-comparison.md  pr-review-guide.md  prd.md  wbs.md
docs/adr/: ADR-001-exaone-model-selection.md  ADR-002-awq-quantization.md  ADR-003-vllm-serving.md  ADR-004-faiss-vector-search.md  README.md
docs/architecture/: ADR-004-enhanced-rag-architecture.md  ADR-005-hybrid-search-architecture.md  ADR-006-agentic-architecture.md  GovOn-shell-mvp-architecture.md  WORKFLOW-orchestrator-tool-calling.md  langgraph-design-415.md  runtime-tuning-guide.md
docs/dora/: history.json  index.html
docs/model_cards/: GovOn_EXAONE_LoRA_v2_card.md
docs/official/: OpenAPI기술문서 - 민원분석정보조회 (ver 2.2).docx
docs/oss/: inner-source-roadmap.md  license-comparison.md
docs/outputs/: README.md
docs/reports/: GovOn_retrain_v2_report.md  ci-optimization-report.md  dora-weekly-report.md
docs/research/: README.md
docs/wiki/: Development-Guide.md  Getting-Started.md  README.md  Troubleshooting.md
e2e/: agent-runtime-contract.spec.ts  api-health.spec.ts  complaint-submit.spec.ts
frontend/: .prettierignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
metrics/: README.md
metrics/dora/: dora-20260317.json  dora-20260318.json  dora-20260319.json  dora-20260320.json  dora-20260321.json  dora-20260322.json  dora-20260323.json  dora-20260324.json  dora-20260325.json  dora-20260327.json  dora-20260330.json  dora-20260402.json  dora-20260406.json  dora-20260408.json  dora-20260413.json  dora-20260420.json  dora-20260427.json  dora-20260504.json  dora-20260511.json  dora-20260518.json
metrics/grafana-cloud/: dora-dashboard.json  setup-guide.md
models/: README.md
nginx/: nginx.conf
nginx/conf.d/: default.conf
notebooks/: 05_merge_and_quantize_v2.ipynb
notebooks/M3_issue26/: 06_evaluate_awq_vllm_kpi.ipynb
notebooks/M3_issue67_hparam/: 03_qlora_hparam_optimization.ipynb
notebooks/M3_issue70_retrain/: 04_qlora_retrain_v2.ipynb  05_evaluate_retrain_v2.ipynb
notebooks/M3_issue82_evaluation/: 02_evaluate_standard.ipynb
scripts/: build_faiss_index.py  build_multi_index.py  check_contribution_rules.sh  deploy-hfspace.sh  deploy.sh  evaluate_search.py  final_api_check.py  govon-bootstrap.sh  offline-deploy.sh  render_dora_preview.py  setup_github_backlog.sh  setup_large_test_files.py  setup_saha_test_files.py  smoke-test.sh  test_alio_only.py  test_api_keys.py  test_law_https.py
scripts/collect_data/: collect_laws.py  collect_laws_web.py  collect_manuals.py  collect_notices.py  collect_public_docs.py  download_helper.py  recovery_ingestion.py  scrape_laws.py
site/: mkdocs.yml  requirements-docs.txt
site/docs/: index.md  national-presentation.md  presentation.md
src/cli/: __init__.py  approval_ui.py  commands.py  daemon.py  http_client.py  renderer.py  shell.py
src/data_collection_preprocessing/: __init__.py  __main__.py  aihub_collector.py  calibration_dataset.py  cli.py  collect_public_docs.py  config.py  data_preprocessor.py  embedding.py  parsers.py  pii_masking.py  pipeline.py  reconstruct_data.py  reconstruct_data_v2.py
src/evaluation/: evaluate_exaone_m3.py  evaluate_m3_autoawq.py  evaluate_m3_final.py  evaluate_m3_stable.py  evaluate_m3_vllm.py  evaluate_m3_vllm_final.py  evaluate_model.py  evaluate_model_v3.py  evaluate_model_v3_hf.py  evaluate_model_v3_peft.py  evaluate_model_v3_runtime.py  evaluate_model_v3_stable.py  evaluate_qwen.py  lean_experiment.py  persona_evaluator.py
src/inference/: agent_loop.py  agent_manager.py  api_server.py  bm25_indexer.py  document_processor.py  feature_flags.py  health_checker.py  hybrid_search.py  index_manager.py  langgraph_runtime.py  local_document_indexer.py  prompt_validator.py  query_builder.py  rate_tracker.py  response_formatter.py  retriever.py  runtime_config.py  schemas.py  search_cache.py  session_context.py  tool_router.py  vllm_stabilizer.py
src/quantization/: merge_lora.py  quantize_awq.py
tests/: test_bm25_indexer.py  test_graph_smoke.py
(+154 files in other folders)
